# python-class-examples

./: README.md  pyproject.toml
src/: data_container_v1.py  data_container_v2.py  data_container_v3.py  data_container_v4.py  fixed_signature_using_class.py  fixed_signature_using_closure.py  fixed_signature_using_partial.py  inject_function_using_callable.py  inject_function_v1.py  inject_function_v1_use.py  inject_function_v2.py  inject_function_v2_call.py  inject_function_v2_use.py  inject_function_v3_call.py  inject_function_v3_use.py  method_v1.py  method_v1_call.py  method_v2.py  method_v2_use.py  polymorphism_v1.py  polymorphism_v1_use.py  polymorphism_v2_use.py
